package com.eventsystem.domain.zone;

public enum ZoneType {
    SEATED,
    STANDING
}
